hide horizontal scroll bar, fix scrolling

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ main {
 	background-color: #d9d9d9;
 	border-radius: 1em;
 	overflow: scroll;
+	overflow-x: hidden;
 
 	grid-area: 2 / 2 / 3 / 3;
 
